Fixed Z-indexes so that social links stay clickable.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -65,7 +65,6 @@ html {
         header {
             width: 100%;
             position: absolute;
-            z-index: 2;
         }
         main {
             z-index: 0;
@@ -121,21 +120,25 @@ html {
             display: block;
             cursor: pointer;
             background: url(../images/icons/menu.svg) no-repeat left center;
+            width: 20px;
+            height: 20px;
             padding: 10px;
-            font-size: 20px;
             transition: 0.1s ease-out;
         }
         .topnav {
             display: block;
+            position: absolute;
             padding: 10px 40px 10px 20px;
             margin-top: 10px;
             transition: opacity 0.1s ease-out;
+            width: 75%;
             opacity: 0;
             height: -10;
             overflow: hidden;
             background-color: $main-light;
             border-radius: 10px;
             appearance: none;
+            z-index: 0;
             box-shadow: var(--shadow-elevation-medium);
             a {
                 display: block;
@@ -161,6 +164,7 @@ html {
     input:checked ~ .topnav {
         overflow: visible;
         opacity: 1;
+        z-index: 2;
         height: 100;
     }
     .page {
@@ -200,14 +204,14 @@ html {
             }
             .social-links {
                 display: flex;
-                width: 100px;
+                width: 150px;
                 flex-direction: row;
                 align-items: center;
                 justify-content: space-between;
-                height: 40px;
-                margin-bottom: 20px;
+                height: 50px;
                 a {
-                    display: block;
+                    display: inline-block;
+                    position: relative;
                     width: 50px;
                     height: 50px;
                     img {
